update to use ActionRequest instead of nodeRequest, update integ tests
Signed-off-by: Jason Chenyang Ji <chenyang.yale@gmail.com>